5.msa/k8s/ingress_cert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-backend-ingress
  namespace: junan-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번째 prefix제거
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
    - "server.junan.shop"
    secretName: server-junan-com-tls
  rules:
  - host: server.junan.shop  # 설정하려는 도메인 이름. 제외시에 elb 주소로도 접근할수 있는 모든 도메인 접근 가능.
    http:
      paths:
      - path: /member-service/(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: jjh-msa-member-service
            port:
              number: 80
      - path: /ordering-service(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: jjh-msa-ordering-service
            port:
              number: 80
      - path: /product-service(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: jjh-msa-product-service
            port:
              number: 80
